client/src/components/Body/Body.sass
.weather-header
  font-size: 1.5rem
  font-weight: 800

.spinner-wrapper
  position: fixed
  top: 10%
  left: 50%
  transform: translate(-50%, -50%)
  z-index: 1000

  .loading-text
    font-size: 1.5rem
    font-weight: 700

.current-wrapper
  max-width: 100vw
  width: 100%
  margin: 20px auto
  display: flex
  flex-direction: column
  flex-wrap: wrap
  justify-content: space-evenly

@media (min-width: 768px)
  .weather-header
    font-size: 2rem

  .current-wrapper
    flex-direction: column

@media (min-width: 1400px)

  .current-wrapper
    flex-direction: row

